@@ -157,6 +157,9 @@ Changes since 2.3.0
 61. modules/csv-module.c: Added line number information to error
     messages.
 62. src/test/: Updated some tests
+63. src/sltoken.c: bug fix affecting reading byte-compiled files: Use
+    SLatoul for unsigned longs instead of atol; remove alignment test
+    from pack.sl until a new test can be devised.
 
 {{{ Previous Versions
 
